--- a/.helm/templates/deployment.yaml
+++ b/.helm/templates/deployment.yaml
@@ -25,5 +25,5 @@ spec:
     spec:
       containers:
       - image: {{ .Values.image.repository }}:{{ .Values.image.tag }}
-        imagePullPolicy: {{ .Values.image.pull_policy }}
+        imagePullPolicy: {{ .Values.image.pullPolicy }}
         name:  {{ .Values.image.repository }}-{{ .Values.image.tag }}
