--- a/.argocd/nginx-staging.yml
+++ b/.argocd/nginx-staging.yml
@@ -11,7 +11,7 @@ spec:
   source:
     helm:
       valueFiles:
-      - values-staging.yml
+      - values-staging.yaml
     path: .helm 
     repoURL: https://github.com/guillermo-ampie/k8s-cicd-demo
     targetRevision: HEAD
