--- a/.helm/templates/deployment.yaml
+++ b/.helm/templates/deployment.yaml
@@ -2,16 +2,16 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
-    app: {{ .Values.image.repository }}
-    tag: {{ .Values.image.tag }}
-  name: {{ .Values.image.repository }}-{{ .Values.image.tag }}
+    app: {{ .Values.labels.app }}
+    tag: {{ .Values.labels.tag }}
+  name: {{ .Values.labels.app }}-{{ .Values.labels.tag }}
   namespace:  {{ .Values.namespace.name }}
 spec:
   replicas: {{ .Values.replica.count }}
   selector:
     matchLabels:
-      app: {{ .Values.image.repository }}
-      tag: {{ .Values.image.tag }}
+      app: {{ .Values.labels.app }}
+      tag: {{ .Values.labels.tag }}
   strategy:
     rollingUpdate:
       maxSurge: 25%
@@ -20,10 +20,10 @@ spec:
   template:
     metadata:
       labels:
-        app: {{ .Values.image.repository }}
-        tag: {{ .Values.image.tag }}
+        app: {{ .Values.labels.app }}
+        tag: {{ .Values.labels.tag }}
     spec:
       containers:
       - image: {{ .Values.image.repository }}:{{ .Values.image.tag }}
         imagePullPolicy: {{ .Values.image.pullPolicy }}
-        name:  {{ .Values.image.repository }}-{{ .Values.image.tag }}
+        name:  {{ .Values.labels.app }}-{{ .Values.labels.tag }}
