Fix target port: nginx by default uses port 80

--- a/.helm/values.yaml
+++ b/.helm/values.yaml
@@ -7,7 +7,7 @@ replica:
 labels:
    app: nginx
    tag: alpine
-   
+
 image:
   repository: nginx
   tag: alpine
@@ -20,6 +20,7 @@ resources:
 service:
    type: ClusterIP
    port: 8111
+   targetPort: 80
 
 configmap:
    data: "version: alpine"
