--- a/.helm/values.yaml
+++ b/.helm/values.yaml
@@ -18,9 +18,10 @@ resources:
   memory: 256Mi
 
 service:
-   type: ClusterIP
+   type: NodePort
    port: 8111
    targetPort: 80
+   nodePort: 30080
 
 configmap:
    data: "version: alpine"
